a1/brendan_gordon/TEST_PROGRAMS/invalidtype/luke_emery-fertitta/undeclared.min
# invalid use of an undeclared variable

var x: int;

x = x + y;
